# EDT-Hackathon

./: .gitignore  IDEA_REFINEMENT.md  README.md  TASK_DIVISION.md
camera-stream-app/: .gitignore  App.js  app.json  constants.js  package-lock.json  package.json
camera-stream-app/hooks/: useWebSocket.js
camera-stream-app/modules/background-camera/: expo-module.config.json  index.ts
camera-stream-app/modules/background-camera/android/: build.gradle
camera-stream-app/modules/background-camera/android/src/main/java/expo/modules/backgroundcamera/: BackgroundCameraModule.kt  BackgroundCameraView.kt
camera-stream-app/modules/background-camera/src/: BackgroundCameraModule.ts  BackgroundCameraView.tsx  index.ts
camera-stream-app/utils/: alertSound.js
collision-detection/: .gitignore
collision-detection/badas-modal/: app.py  local_server.py  pyproject.toml  server.py  test_client.py  test_frame_inference.py
collision-detection/badas-uv/: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_inference.py
collision-detection/badas-uv/.github/workflows/: ci.yml  release.yml
collision-detection/badas-uv/annotation/: dad_test_concensus.csv  dada2000_small_test_concensus.csv  dota_test_concensus.csv
collision-detection/badas-uv/badas/: __init__.py  badas_loader.py  cli.py  config.json
collision-detection/badas-uv/badas/core/: base.py
collision-detection/badas-uv/badas/models/: vjepa.py
collision-detection/badas-uv/badas/train/: __init__.py  video_training.py
collision-detection/badas-uv/badas/utils/: sliding_window.py  video.py
collision-detection/badas-uv/examples/: README.md  basic_inference.py
drowsyness-detection/: data_exploration.ipynb  detect.py  evaluate.py  pyproject.toml  results.txt  test.py
stream-server/: README.md  asgi_app.py  mediapipe_backend.py  modal_app.py  requirements-modal.txt  requirements.txt  server.py  shared_test_jpeg.py
stream-server/scripts/: e2e_ws_test.py  smoke_test.py
stream-server/systemd/: guardcam.service.example
stream-server/tests/: __init__.py  test_asgi_websocket.py
