[project]
name = "drowsyness-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "huggingface-hub>=1.7.2",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "mediapipe==0.10.14",
    "ultralytics>=8.4.24",
]
