[project]
name = "badas-modal"
version = "0.1.0"
description = "BADAS collision prediction served via WebSocket on Modal"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "huggingface_hub>=0.20.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "albumentations>=1.3.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "fastapi[standard]",
    "uvicorn[standard]",
    "websockets>=12.0",
    "modal>=0.73.0",
    "badas",
]

[tool.uv.sources]
badas = { path = "../badas-uv", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
